<resources>
    <string name="app_name">CateringHelper</string>

    <string name="vegetarian">Вегетарианец</string>
    <string name="meat_eater">Мясоед</string>

    <string name="russian_cuisine">Русская кухня</string>
    <string name="asian_cuisine">Азиатская кухня</string>
    <string name="armenian_cuisine">Армянская кухня</string>
    <string name="american_cuisine">Американская кухня</string>
    <string name="japanese_cuisine">Японская кухня</string>
    <string name="caucasian_cuisine">Кавказская кухня</string>
    <string name="georgian_cuisine">Грузинская кухня</string>
    <string name="oriental_cuisine">Восточная кухня</string>
    <string name="azerbaijani_cuisine">Азербайджанская кухня</string>
    <string name="european_cuisine">Европейская кухня</string>
    <string name="pan_asian_cuisine">Паназиатская кухня</string>
    <string name="jewish_cuisine">Еврейская кухня</string>
    <string name="vegetarian_cuisine">Вегетарианская кухня</string>
    <string name="italian_cuisine">Итальянская кухня</string>
    <string name="mexican_cuisine">Мексиканская кухня</string>
    <string name="buryat_cuisine">Бурятская кухня</string>
    <string name="yakut_cuisine">Якутская кухня</string>
    <string name="thai_cuisine">Тайская кухня</string>
    <string name="korean_cuisine">Корейская кухня</string>
    <string name="chinese_cuisine">Китайская кухня</string>
    <string name="indian_cuisine">Индийская кухня</string>
    <string name="vegan_cuisine">Веганская кухня</string>
    <string name="french_cuisine">Французская кухня</string>
    <string name="uzbek_cuisine">Узбекская кухня</string>
    <string name="hawaiian_cuisine">Гавайская кухня</string>
    <string name="hal_cuisine">Халяльная кухня</string>
    <string name="turkish_cuisine">Турецкая кухня</string>

    <string name="unwanted_ingredient_vegetables">Овощи</string>
    <string name="unwanted_ingredient_seafood">Морепродукты</string>
    <string name="unwanted_ingredient_fruits">Фрукты</string>
    <string name="unwanted_ingredient_mushrooms">Грибы</string>
    <string name="unwanted_ingredient_grains">Злаковые</string>
    <string name="unwanted_ingredient_meat">Мясо</string>

    <string name="unwanted_ingredients_title">Каких ингредиентов в блюде быть не должно?</string>
    <string name="choice_meat">Употребляете ли Вы мясо?</string>
    <string name="choice_cuisines">Какие кухни предпочитаете?</string>
    <string name="choice_preferences">Выберите свои предпочтения</string>

    <string name="label_salads">Салаты</string>
    <string name="label_shawarma">Шаурма</string>
    <string name="label_rolls">Роллы</string>
    <string name="label_soups">Супы</string>
    <string name="label_coffee">Кофе</string>
    <string name="label_drinks">Напитки</string>
    <string name="label_hot_dishes">Горячие блюда</string>
    <string name="label_snacks">Закуски</string>
    <string name="label_desserts">Десерты</string>
    <string name="label_kebabs">Шашлыки</string>
    <string name="label_pizza">Пицца</string>

    <string name="next">Далее</string>
    <string name="yes_delivery">Есть доставка</string>
    <string name="no_delivery">Нет доставки</string>
    <string name="does_not_matter">Не важно</string>

    <string name="choice_label">Выберите категорию блюда</string>
    <string name="choice_rating">Выберите желаемый рейтинг заведения</string>
    <string name="choice_price">Выберите ценовой диапазон среднего чека заведения</string>
    <string name="choice_delivery">Должна ли быть доставка?</string>
    <string name="choice_favourite_catering">Выберите наиболее понравившееся заведение из представленных</string>
    <string name="caterings_top_title">На основе ваших предпочтений был сформирован список рекомендуемых для посещения заведений</string>
    <string name="go_to_dishes">Для просмотра рекомендуемых блюд выберите заведение</string>
    <string name="dishes_title">Список блюд, подобранный с учетом ваших предпочтений</string>

</resources>