<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.filterScreen.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <TextView
            android:id="@+id/choiceLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/choice_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/labelsChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="4dp"
            app:checkedChip="@id/saladsChip"
            app:chipSpacingHorizontal="2dp"
            app:chipSpacingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choiceLabelTextView"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/saladsChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_salads"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/shawarmaChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_shawarma"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rollsChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_rolls"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/soupsChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_soups"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/coffeeChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_coffee"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/drinksChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_drinks"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/hotDishesChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_hot_dishes"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/snacksChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_snacks"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dessertsChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_desserts"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/kebabsChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_kebabs"
                app:chipMinTouchTargetSize="32dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pizzaChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/label_pizza"
                app:chipMinTouchTargetSize="32dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/choiceRatingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/choice_rating"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelsChipGroup" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/my_ratingbar_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:progress="0"
            android:rating="2.0"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choiceRatingTextView" />

        <TextView
            android:id="@+id/choicePriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/choice_price"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/priceSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:stepSize="10"
            android:valueFrom="0"
            android:valueTo="3000"
            app:labelBehavior="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choicePriceTextView"
            app:values="@array/initial_slider_values" />

        <TextView
            android:id="@+id/choiceDeliveryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/choice_delivery"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceSlider" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choiceDeliveryTextView">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"

                app:checkedChip="@id/doesNotMatterChip"
                app:selectionRequired="true"
                app:singleLine="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesDeliveryChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes_delivery"
                    app:chipMinTouchTargetSize="32dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/noDeliveryChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no_delivery"
                    app:chipMinTouchTargetSize="32dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/doesNotMatterChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="@font/inter"
                    android:text="@string/does_not_matter"
                    app:chipMinTouchTargetSize="32dp" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>